--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Fredrik Boukharta",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
